--- a/doc/软件开发世界观/3. go 服务目录模版.md
+++ b/doc/软件开发世界观/3. go 服务目录模版.md
@@ -119,7 +119,7 @@
 ```
 
 ## 目录/命名注意事项
-- 使用小写/下划线或小写驼峰，不用大写/空格。
+- 使用小写/下划线，不用大写/空格。
 - 文件名体现职责：`user_handler.go`、`user_service.go`、`user_repo.go`。
 - `internal` 内的类型/函数尽量最小可见性；跨包暴露接口而非结构体字段。
 - 生成代码（proto/pb/openapi client）放在靠近 handler 的子目录，避免污染手写代码。
