--- a/doc/软件开发世界观/2. go服务开发规范.md
+++ b/doc/软件开发世界观/2. go服务开发规范.md
@@ -3,84 +3,126 @@
 适用范围：Go 微服务/作业/后台工具。目标：让日常开发遵循《软件开发价值观》和《软件开发原则》，特别是各分类的红线。
 
 ## 总体红线（全局适用）
-- 不跨服务共享内部结构：跨边界只暴露契约（API/proto/DTO），不得直接复用对方 internal/model/pb。
-- 先契约、后实现，默认向后兼容：破坏性变更必须版本化/灰度/有回滚。
-- 可读性优先：代码与配置要易读可测；复杂技巧优先换成清晰实现。
-- 数据正确优先于代码：入库/出库/发布消息前做校验；坏数据不上线。
-- 超时与重试有界：所有外部调用设超时、有限重试且幂等；禁止盲重试。
-- 自动化门禁：gofmt/lint/测试不通过不上线。
-- 有决策就有 ADR：关键架构/选型/破坏性变更要记录决策与回滚方案。
+- 必须：跨服务通过契约（API/proto/DTO），不共享 internal/model/pb。
+- 必须：先契约后实现，默认向后兼容，破坏性变更要版本化/灰度/回滚方案。
+- 必须：代码/配置可读可测；入/出库、消息前做校验；自动化门禁（gofmt/goimports/lint/test）通过才上线；关键决策要有 ADR。
+- 必须：所有外部调用设超时、有限重试且幂等。
+- 禁止：盲重试、复杂技巧遮蔽意图。
 
 ## 开发流程（框架）
-1) 立项&类型选择 → 选服务类型、目录模板、基础依赖。
-2) 数据建模草稿 → 先以领域/用例画实体关系、主索引、关键字段（不落地 SQL）。
+1) 立项&类型 → 选服务类型、目录模板、基础依赖。
+2) 数据草稿 → 领域/用例画实体、主索引、关键字段（先不落地 SQL）。
 3) 契约草稿 → 基于数据草稿推导 API/gRPC/事件契约、错误语义、兼容策略。
-4) 契约+数据双向评审 → 对齐字段/类型/单位/精度/约束/默认值/兼容策略；确定选库（SQL/NoSQL）、表/索引/迁移计划、类型映射。
-5) 框架/目录落地 → 按服务类型套目录模板，生成样板代码。
-6) 编码与测试 → 按编码规范、测试金字塔，CI 绿灯。
-7) 观测与可靠性 → 指标/日志/追踪、超时/重试/熔断/幂等、健康检查。
-8) 发布与运维 → 变更清单、灰度/开关、回滚预案、演练。
+4) 契约+数据评审 → 对齐字段/类型/单位/约束/默认值/兼容；定选库、表/索引、迁移计划、类型映射。
+5) 目录落地 → 按类型套模板，生成样板。
+6) 编码&测试 → 按编码规范+测试金字塔，CI 绿灯。
+7) 观测&可靠性 → 指标/日志/追踪、超时/重试/熔断/幂等、健康检查。
+8) 发布&运维 → 变更清单、灰度/开关、回滚预案、演练。
 
 ## 1. 项目结构与边界
-- 目录约定：`cmd/<service>`（入口），`internal/<domain>`（内部逻辑），`pkg/<lib>`（可复用但保持稳定 API），`api/`（proto/DTO），`configs/`（配置模板），`scripts/`（工具），`deploy/`（CI/CD/Helm）。
-- internal 不得跨服务依赖；公共库须放 pkg 并版本化。
-- 模块/包单一职责；包内只暴露必须的接口/类型，其他放私有。
-- 依赖方向：接口/用例层不依赖具体实现；适配器依赖接口。
-- 抽象时机：出现 2+ 实现或明确变化点再抽象；否则保持具体实现。
+- 目录与可见性
+  - 必须：`cmd/<service>` 入口；`internal/<domain>` 私有；`pkg/` 稳定复用库；`api/` 契约；`configs/` 配置；`scripts/` 工具；`deploy/` CI/CD；`migrations/` 迁移。
+  - 必须：`internal` 不跨服务依赖；公共库放 `pkg` 并版本化。
+  - 必须：文件名/目录名使用小写字母+下划线。
+  - 禁止：跨服务引用他人 `internal`/model/pb。
+- 职责与依赖方向
+  - 必须：模块/包单一职责；接口/用例层不依赖具体实现，适配器依赖接口。
+  - 可选：抽象仅在 2+ 实现或明确变化点时做。
 
 ## 2. 契约与类型
-- 契约先行：接口/proto/schema 先评审再实现；改代码前先改契约/文档。
-- 向后兼容：新增字段优先；删除/修改需版本化、灰度、观测窗口。
-- 类型一致：API/proto/DB/消息的字段类型保持一致，不做隐式转换。
-- 时间/ID 规范：时间统一用 `time.Time`（UTC）或毫秒/纳秒 int64（写明单位）；ID 长度/有序性选型前置（UUIDv4/雪花），写入/索引要评审。
-- 错误语义：错误码/错误类型/重试语义一致且文档化；业务错误不返回 200。
-- 契约版本化：proto/API/Schema 有版本策略，废弃路径和时间线可查询。
+- 策略与兼容
+  - 必须：契约先行并评审；新增优先；删除/修改需版本化+灰度+观测窗口。
+  - 必须：字段类型 API/proto/DB/消息一致；错误码/错误类型/重试语义统一且文档化；契约版本化可查废弃路径。
+- 命名与格式
+  - 必须：REST/OpenAPI `operationId` 用小驼峰的名词或名词短语；gRPC RPC 方法名用帕斯卡命名（大驼峰，例如 `GetUser`、`CreateOrder`）；消息 Topic 名用帕斯卡命名。
+  - 必须：对外请求/响应字段使用小写字母+下划线（例如 `user_id`、`created_at`）。
+  - 禁止：动词、复数、缩写、特殊符号、空格、下划线（除对外字段采用下划线格式的要求）。
+- 时间与 ID
+  - 必须：时间用 UTC `time.Time` 或 int64(ms/ns) 并标单位。
+  - 必须：ID 选型前置（UUIDv4/雪花），索引/存储评审。
+  - 禁止：时间传字符串不带时区/单位；自增 ID 暴露为对外标识。
+- 字段类型与精度
+  - 必须：金额用 DECIMAL(18,2) 或更高精度，不用 float/double；布尔用 bool/TINYINT(1)；枚举用小整数或字符串并列出取值。
+  - 必须：数量/计数用 int64；时间戳用 int64(ms/ns) 或时间类型且注明单位。
+  - 必须：字符串字段长度受控（如 VARCHAR(N)）；大文本用 TEXT 但评估索引策略。
+  - 禁止：使用未限定精度/长度的类型；滥用 JSON 字段替代表设计。
 
 ## 3. 编码与实现
-- 可读性：强制 gofmt；命名清晰；小函数/小文件；避免魔数（常量化）。
-- 命名：包/文件小写；变量/函数用有意义的英文名，避免缩写；接口用行为命名（`Doer`），实现用具体名。
-- 逻辑复杂度：尽量使用 guard clause，避免 if/else 深嵌套（建议不超 3 层）；可用表驱动/策略替代分支爆炸。
-- 接口与依赖注入：接口小而专注；依赖显式传入（构造函数/函数参数），少用全局。
-- 上下文：跨边界函数必须传 `context.Context`；不得将 ctx 存全局。
-- 副作用隔离：IO/网络放在适配层；核心逻辑尽量纯函数，便于测试与重用。
-- 错误处理：显式返回错误，使用 `errors.Wrap` 类模式保留上下文；区分可重试/不可重试；严禁吞错。
-- 禁止忽略错误：不得使用 `_ = err` 吞错；不得直接 `if err != nil { return }` 不带上下文。
-- 日志与指标：结构化日志，统一 logger；避免打印敏感信息；高 QPS 路径需采样/限频。关键路径暴露指标（QPS/latency/error），埋点携带 trace/span。
-- 配置：使用配置文件/环境变量，默认安全值；配置热更新需验证与回滚策略。
-- 并发：创建 goroutine 必可控退出（ctx/stop chan）；避免泄漏；channel 容量合理。
-- 复用：优先复用 pkg 或第三方库，但评估稳定性与最小依赖。
+- 格式与命名
+  - 必须：gofmt/goimports；包/文件小写；内部变量/参数/模型字段使用驼峰（导出首字母大写，包内首字母小写）；接口用行为名（Doer），实现用具体名；一函数一职责；常量使用全大写字母+下划线。
+  - 禁止：模糊/无意义命名、缩写堆砌。
+- 结构与复杂度
+  - 必须：使用 guard clause，if/else 深度 ≤ 2；分支多用表驱动/策略模式。
+  - 禁止：深层嵌套、在同层混合多职责。
+- 依赖与上下文
+  - 必须：依赖显式注入；跨边界传 `context.Context`，不得存全局。
+  - 禁止：全局可变单例渗透业务。
+- 副作用与分层
+  - 必须：IO/网络在适配层，核心尽量纯；repo 方法一事一责；logic 只注册 `repo *repo.Repo`，各 repo 在 provider 注册。
+  - 禁止：业务层直接操作全局资源。
+- 错误处理
+  - 必须：显式返回错误并包上下文；区分可重试/不可重试；不得 `_ = err` 吞错。
+  - 禁止：裸 panic；无上下文的 `if err != nil { return }`。
+- 日志与指标
+  - 必须：结构化日志，避免敏感；高 QPS 采样；关键路径暴露 QPS/延迟/错误率 + trace。
+  - 禁止：打印敏感信息、日志风暴。
+- 并发
+  - 必须：goroutine 有退出（ctx/chan）；避免泄漏；channel 容量合理。
+  - 禁止：无限制开启 goroutine、共享可变数据不加保护。
+- 配置与安全
+  - 必须：配置文件/环境变量，默认安全；热更新需验证+回滚策略。
+  - 禁止：硬编码密钥/证书。
 
 ## 4. 数据访问
-- 数据契约与校验：入库/出库/消息发布前做校验，禁止无校验写入。
-- 命名与生命周期：表/字段命名语义化；created_at/updated_at/deleted_at/is_delete 标准化。
-- 访问模式：统一 ORM/SQL 工具；必须使用预编译/参数化，禁止拼接 SQL；扫描 null 字段用合适类型（sql.Null* 或指针）。
-- 事务：显式事务边界；必要时加超时；禁止长事务持锁。
-- 索引与查询：为主查询场景设计索引；避免无谓全表扫描；变更前评审。
-- 迁移：使用迁移工具（如 goose/tern/atlas），每次迁移必须有回滚脚本，先演练再上线。
-- 数据安全：最小权限；敏感字段加密/脱敏；备份需加密，定期恢复演练。
+- 命名与结构
+  - 必须：表/字段名小写下划线、名词（可带形容词）；必有 created_at/updated_at/is_delete/deleted_at。
+  - 禁止：拼音、特殊符号、空格、关键字。
+- 契约与校验
+  - 必须：入/出库、消息发布前校验；对外交互使用 uuid，不用自增 id。
+- 访问与事务
+  - 必须：统一 ORM/SQL 工具；参数化/预编译，禁止拼接 SQL。
+  - 必须：显式事务边界，必要时设超时，禁止长事务持锁。
+- 索引与性能
+  - 必须：针对主查询设计索引；预估扩张表提前索引；变更前评审。
+- 迁移与注释
+  - 必须：使用迁移工具；每次迁移有回滚脚本，演练后上线；表/字段必须加注释。
+- 安全与备份
+  - 必须：最小权限；敏感字段加密/脱敏；备份加密并定期恢复演练。
 
 ## 5. 运行与可靠性（含安全）
-- 超时与重试：HTTP/gRPC/DB/Cache/Kafka 等外部调用必须设置超时；重试有限次且幂等，使用指数退避；避免重试风暴。
-- 幂等：写操作设计幂等键或去重机制；补偿/重放必须幂等。
-- 隔离/熔断/降级：跨依赖调用配置隔离（连接池/线程池/队列），提供降级路径；熔断后快速失败。
-- 健康检查：区分 liveness/readiness；依赖不可用时 readiness 失败。
-- 优雅退出：监听信号，阻止新请求，等待在途完成或超时丢弃，清理资源。
-- 可观测性：关键路径有指标/日志/追踪；定义 SLO/错误预算；无观测不准上线。
-- 安全默认开启：TLS、证书校验、最小权限、密钥不落盘；避免在日志/指标中泄露敏感数据。
-- 演练：故障注入/回滚/灾备演练常态化；未演练的变更不上核心路径。
+- 超时/重试/幂等
+  - 必须：所有外部调用设超时；重试有限次、幂等、指数退避；写操作设计幂等键；补偿/重放必须幂等。
+- 隔离/熔断/降级
+  - 必须：对下游配置隔离（池/队列），提供降级；熔断快速失败。
+- 健康/退出
+  - 必须：区分 liveness/readiness；依赖不可用时 readiness fail；优雅退出（停流量、等待在途、清理资源）。
+- 可观测性
+  - 必须：关键路径指标/日志/追踪；定义 SLO/错误预算；无观测不上线。
+- 安全
+  - 必须：默认 TLS/证书校验、最小权限、密钥不落盘；日志/指标不泄露敏感。
+- 演练
+  - 必须：故障注入/回滚/灾备演练常态化；未演练的变更不上核心路径。
 
 ## 6. 自动化与交付
-- 预提交：必须 gofmt（或 gofumpt）、goimports、lint（golangci-lint），单元/契约测试；不绿不上线。
-- CI/CD：流水线至少跑 fmt/lint/test(-race)/构建/镜像扫描/部署前检查；构建产物可复现（版本号、提交哈希）。
-- 测试金字塔：单元测试覆盖核心逻辑（含错误路径）；契约测试覆盖接口契约；集成测试覆盖关键链路（含 DB/缓存/消息）；端到端/回归覆盖用户路径；关键库和并发敏感代码跑 `go test -race`。
-- 变更说明：每次上线需变更清单、风险评估、回滚方案；大改动先灰度/特性开关。
-- 环境一致性：开发/预发/生产尽量同构；配置通过环境覆盖，禁止硬编码。
+- 预提交/CI
+  - 必须：gofmt/gofumpt、goimports、golangci-lint、单元/契约测试通过。
+  - 必须：CI 跑 fmt/lint/test(-race)/构建/镜像扫描/部署前检查；构建产物可复现（版本号、commit）。
+- 测试金字塔
+  - 必须：单元测核心/错误路径；契约测接口契约；集成测关键链路（含 DB/缓存/消息）；端到端/回归测用户路径；并发敏感代码跑 `go test -race`。
+- 变更与灰度
+  - 必须：每次上线有变更清单、风险评估、回滚方案；重要功能灰度/特性开关。
+- 环境一致性
+  - 必须：开发/预发/生产同构；配置用环境覆盖，禁止硬编码。
 
 ## 7. 协作与治理
-- ADR：关键架构/选型/破坏性变更产出 ADR，包含背景、选项、决策、验证与回滚方案。
-- DoD & 评审：需求完成需通过 DoD（测试、文档、监控、安全、回滚检查）；评审清单覆盖契约、边界、可靠性、安全、性能。
-- 复盘：故障/回滚/性能事件后复盘，行动项跟踪关闭。
-- AI 使用边界：标注 AI 生成内容；必须人工校对；敏感数据不得输入/输出。
+- 决策与记录
+  - 必须：关键架构/选型/破坏性变更有 ADR，含回滚/验证方案。
+- 完成定义与评审
+  - 必须：DoD 含测试/文档/监控/安全/回滚检查；评审覆盖契约、边界、可靠性、安全、性能。
+- 复盘
+  - 必须：故障/回滚/性能事件后复盘并跟踪行动项。
+- AI 使用
+  - 必须：标注 AI 生成内容，人工校对，敏感数据不得输入/输出。
 
 ## 8. 参考价值观映射
 - 边界/耦合/抽象：少即是多；可读性与一致性；清晰边界与故障隔离；可演进与可回滚。
