--- a/doc/一期系统设计文档/2. 一期系统设计（DSCO-领星自动化）.md
+++ b/doc/一期系统设计文档/2. 一期系统设计（DSCO-领星自动化）.md
@@ -342,10 +342,72 @@ sequenceDiagram
 - 指标：每个流程成功/失败/重试次数、积压数量、耗时分位。
 - 告警：连续失败、积压超阈值、token 过期/鉴权失败、映射缺失等。
 
+## 8.1 可视化运维后台（Admin UI，MVP）
+
+> 目的：降低长期运维压力，避免反复手工调接口/查库；用网页把“任务/水位/人工队列/订单状态”直观呈现出来。
+
+### 8.1.1 定位与边界
+
+- Admin UI 只服务运维与排障，不承载业务主流程。
+- Admin UI 不直接暴露给公网；一期默认部署在内网或通过堡垒机访问。
+- Admin UI 的数据来源全部来自本系统数据库（`sync_order_state/job_watermark/manual_task`）与本系统现有管理 API。
+
+### 8.1.2 技术选型（一期）
+
+- Web 框架：Gin
+- 页面模板：Go `html/template`（Gin template）
+- 前端：轻量原生 JS + 少量 CSS（简洁风格，参考苹果信息层级与留白）
+- API：同一进程内提供 JSON API（供页面 Ajax 调用），保持与“脚本/CI/人工 curl”一致口径
+- 代码位置：`admin/adminweb/`（与业务代码分离）
+
+### 8.1.3 安全策略（一期最小）
+
+> 一期只做“密码访问”，不做账号体系与次数限制。
+
+- 配置项：`IPASS_ADMIN_PASSWORD`
+- 访问策略：
+  - 未认证访问 `/admin/ui/*` 自动跳转到登录页
+  - 登录页输入密码校验通过后，写入 HttpOnly 的 session cookie（浏览器关闭即失效）
+  - session cookie 使用 HMAC 签名（secret 派生自 `IPASS_ADMIN_PASSWORD`），避免明文与篡改
+  - 脚本/命令行访问 JSON API：请求头携带 `X-Admin-Password: <IPASS_ADMIN_PASSWORD>`
+
+### 8.1.4 页面与能力（MVP）
+
+MVP 页面清单（建议路由）：
+
+- 登录页：`GET /admin/ui/login`、`POST /admin/ui/login`
+- 总览页：`GET /admin/ui/`
+  - 展示：各 job 水位摘要、失败/人工/处理中数量、最近更新时间
+- 订单状态查询：`GET /admin/ui/order`
+  - 输入 `dscoOrderId`，展示 `sync_order_state` 的闭环状态与 last_error/retry_count
+- 订单列表：`GET /admin/ui/orders`
+  - 支持按 push/ack/ship/invoice 状态筛选、分页
+- 人工任务：`GET /admin/ui/manual_tasks`
+  - 支持按 status 分页查看（一期只读）
+- 水位管理：`GET /admin/ui/watermarks`
+  - 可查看/编辑各 job watermark（JSON 文本形式，提交前做 JSON 校验）
+- 手动触发：`GET /admin/ui/jobs`
+  - 提供按钮触发一次 job（等价于 `/admin/run?job=...`）
+
+### 8.1.5 API 口径（给 UI 与脚本共用）
+
+建议将 JSON API 统一纳入 `/admin/api/*`（或保持现有 `/admin/*`，二选一即可）：
+
+- `GET /healthz`
+- `POST /admin/run?job=...`
+- `GET /admin/watermark/get?job=...`
+- `POST /admin/watermark/set?job=...`
+- `GET /admin/manual_tasks?status=0&limit=50&offset=0`
+- `GET /admin/order_state/get?dsco_order_id=...`
+- `GET /admin/order_states?push_status=&ack_status=&ship_status=&invoice_status=&limit=&offset=`
+
+> 原则：UI 只“消费”这些 API，不再发明另一套口径，避免维护两份逻辑。
+
 ## 9. 安全与密钥
 
 - DSCO bearer token、领星 access_token/refresh_token 只放密钥配置，不写日志。
 - 对外请求与响应日志脱敏（token、地址电话等敏感字段不落日志或打码）。
+- Admin UI 密码只用于访问控制，不写入日志，不回显。
 
 ## 10. 数据库选型与建表（一期）
 
