分离 admin 和 业务代码

--- a/doc/一期系统设计文档/4. 一期开发验收设计（DSCO-领星自动化）.md
+++ b/doc/一期系统设计文档/4. 一期开发验收设计（DSCO-领星自动化）.md
@@ -18,8 +18,10 @@
 1. 本地单测通过：`go test ./...`
 2. MySQL 建库建表：执行 `migrations/0001_init.sql`
 3. 准备 `.env`：从 `.env.example` 复制并填好 DSCO/领星/MySQL/后台密码等
-4. 启动服务：`go run ./cmd/ipass/main.go`
-5. 打开 Admin UI：`/admin/ui/login` 登录 → `/admin/ui/` 总览确认页面可用
+4. 启动业务进程：`go run ./cmd/ipass/main.go`（提供闭环调度 + ops HTTP）
+5. 准备 `.env.admin`：从 `.env.admin.example` 复制并填好 admin DB/密码/ops 地址等
+6. 启动 admin 进程：`go run ./cmd/admin/main.go`（提供 Admin UI）
+7. 打开 Admin UI：`/admin/ui/login` 登录 → `/admin/ui/` 总览确认页面可用
 6. 用 Admin UI/接口确认“可追踪”：能查到水位、订单状态、人工任务、日志 trace_id
 7. 先跑一轮“只写本库”的链路：`pull_dsco_orders`（验证增量水位 + 状态落库 + `dsco_order_raw` 快照）
 8. 再跑外部闭环：`push_orders_to_lingxing` → `ack_to_dsco` → `ship_to_dsco` → `invoice_to_dsco`
@@ -27,7 +29,10 @@
 10. 做一次“故障演练”：验证 `IPASS_MAX_RETRY_PER_ORDER` 达到上限后转人工
 
 重要注意：
-- 当前程序中 “`/admin/run?job=...` 可触发哪些 job” 与 `.env` 中的 `IPASS_JOB_*_ENABLE` 开关口径一致：如果你要通过管理端手动触发某个 job，请确保对应的 `IPASS_JOB_*_ENABLE=true`。
+- 当前程序采用“两进程分离”：
+  - 业务进程（`cmd/ipass`）提供 ops HTTP（`/admin/*`）用于触发任务
+  - admin 进程（`cmd/admin`）提供可视化后台（UI + API），并通过 HTTP 调用业务 ops 触发任务
+- 如果你要通过 ops 触发某个 job，请确保业务侧已启用对应能力与配置（例如 DSCO/领星 token、sid、库存映射等），否则会在运行时返回错误。
 - 如果你不希望调度器频繁自动执行：把 `*_INTERVAL_SEC` 调大（例如 `86400`），即可基本等同于“只手动验收触发”。
 
 ## 1. 验收目标与结论口径
@@ -154,6 +159,7 @@ TRUNCATE TABLE job_watermark;
 - `IPASS_DB_DSN`
 - `IPASS_LOG_DIR`
 - `IPASS_HTTP_ENABLE` / `IPASS_HTTP_ADDR`
+- `IPASS_OPS_PASSWORD`：业务进程 ops 接口鉴权密码（调用业务 `/admin/*` 必须带 `X-Ops-Password`）
 - `IPASS_DSCO_BASE_URL` / `IPASS_DSCO_TOKEN`
 - `IPASS_LINGXING_BASE_URL` / `IPASS_LINGXING_APP_ID` / `IPASS_LINGXING_ACCESS_TOKEN`
 - `IPASS_LINGXING_PLATFORM_CODE` / `IPASS_LINGXING_STORE_ID` / `IPASS_LINGXING_SID`
@@ -221,10 +227,15 @@ IPASS_STOCK_SKU_TO_DSCO_SKU_JSON="{\"LXSKU-1\":\"DSCOSKU-1\"}"
 
 ### 5.3 Admin 后台认证（一期最小）
 
-- 如果配置 `IPASS_ADMIN_PASSWORD`：
-  - 浏览器访问 Admin UI：先打开 `GET /admin/ui/login` 输入密码登录（写入 session cookie）
-  - 脚本/命令行调用管理 API：请求头携带 `X-Admin-Password: <IPASS_ADMIN_PASSWORD>`
-- 如果未配置 `IPASS_ADMIN_PASSWORD`（空字符串）：一期允许直接访问（仅建议本地开发环境使用）
+admin 进程与业务进程完全分离，分别有各自的鉴权口径：
+
+- admin UI/API（admin 进程）：
+  - 登录密码：`ADMIN_PASSWORD`
+  - 浏览器：`GET /admin/ui/login` 登录（session cookie）
+  - 脚本：请求头 `X-Admin-Password: <ADMIN_PASSWORD>`
+- 业务 ops（业务进程）：
+  - 鉴权密码：`IPASS_OPS_PASSWORD`
+  - 调用业务 `/admin/*` 必须带 `X-Ops-Password: <IPASS_OPS_PASSWORD>`
 
 ---
 
@@ -234,7 +245,8 @@ IPASS_STOCK_SKU_TO_DSCO_SKU_JSON="{\"LXSKU-1\":\"DSCOSKU-1\"}"
 
 在项目根目录执行：
 
-- `go run ./cmd/ipass/main.go`
+- 启动业务进程：`go run ./cmd/ipass/main.go`
+- 启动 admin 进程：`go run ./cmd/admin/main.go`
 
 ### 6.2 健康检查
 
@@ -282,8 +294,8 @@ IPASS_STOCK_SKU_TO_DSCO_SKU_JSON="{\"LXSKU-1\":\"DSCOSKU-1\"}"
 ### 7.1 手动触发任务
 
 > 注意：
-> - 若你配置了 `IPASS_ADMIN_PASSWORD`，调用下面接口需带请求头：`X-Admin-Password: <IPASS_ADMIN_PASSWORD>`（或先在 `/admin/ui/login` 登录）。
-> - 若要通过 `/admin/run` 触发某个 job，请确保对应的 `IPASS_JOB_*_ENABLE=true`（否则该 job 不会注册到 runner 列表）。
+> - 触发任务属于“业务 ops”：实际调用的是业务进程的 `/admin/run`，请求头必须携带 `X-Ops-Password: <IPASS_OPS_PASSWORD>`。
+> - 你也可以通过 admin UI 的“任务”页面触发（admin 会代你调用业务 ops）。
 
 - `POST /admin/run?job=pull_dsco_orders`
 - `POST /admin/run?job=push_orders_to_lingxing`
@@ -523,22 +535,22 @@ IPASS_STOCK_SKU_TO_DSCO_SKU_JSON="{\"LXSKU-1\":\"DSCOSKU-1\"}"
 示例（curl）：
 
 ```bash
-curl -H "X-Admin-Password: change-me" http://127.0.0.1:8080/healthz
-curl -H "X-Admin-Password: change-me" "http://127.0.0.1:8080/admin/order_state/get?dsco_order_id=d1"
-curl -H "X-Admin-Password: change-me" -X POST "http://127.0.0.1:8080/admin/run?job=pull_dsco_orders"
+curl -H "X-Ops-Password: change-me-ops" http://127.0.0.1:8080/healthz
+curl -H "X-Ops-Password: change-me-ops" "http://127.0.0.1:8080/admin/order_state/get?dsco_order_id=d1"
+curl -H "X-Ops-Password: change-me-ops" -X POST "http://127.0.0.1:8080/admin/run?job=pull_dsco_orders"
 ```
 
 示例（PowerShell）：
 
 ```powershell
-Invoke-RestMethod -Headers @{ "X-Admin-Password"="change-me" } -Method Get  -Uri "http://127.0.0.1:8080/healthz"
-Invoke-RestMethod -Headers @{ "X-Admin-Password"="change-me" } -Method Post -Uri "http://127.0.0.1:8080/admin/run?job=pull_dsco_orders"
+Invoke-RestMethod -Headers @{ "X-Ops-Password"="change-me-ops" } -Method Get  -Uri "http://127.0.0.1:8080/healthz"
+Invoke-RestMethod -Headers @{ "X-Ops-Password"="change-me-ops" } -Method Post -Uri "http://127.0.0.1:8080/admin/run?job=pull_dsco_orders"
 ```
 
 ### 12.2 水位设置（验收常用）
 
 ```bash
-curl -H "X-Admin-Password: change-me" -X POST \
+curl -H "X-Ops-Password: change-me-ops" -X POST \
   "http://127.0.0.1:8080/admin/watermark/set?job=pull_dsco_orders" \
   -d "{\"mode\":\"updatedSince\",\"since\":\"2025-01-01T00:00:00Z\"}"
 ```
