--- a/doc/DSCO同步领星设计文档/2.架构设计.md
+++ b/doc/DSCO同步领星设计文档/2.架构设计.md
@@ -114,9 +114,6 @@
 │   │   └── tx.go                  # 事务小工具（可选）
 │   └── store/
 │       ├── runtime_config_store.go      # 运行时配置持久化（当前生效配置）
-│       ├── config_audit_store.go        # 配置审计与回滚
-│       ├── job_lock_store.go            # 任务互斥锁：同一任务不并发（定时/手动共享）
-│       ├── job_run_store.go             # 任务运行记录（开始/结束/耗时/错误），给 Admin 展示
 │       ├── dsco_order_sync_store.go     # dsco_order_sync：upsert(po_number 唯一)、查询/导出
 │       └── dsco_warehouse_sync_store.go # dsco_warehouse_sync：写日志、查询/导出
 │
@@ -125,7 +122,7 @@
 │       # 清理策略：由 integration/ops/cleanup_exports.go 定时检查；目录总大小超过 100MB 时触发清理
 │
 ├── migrations/
-│   ├── 0001_init_pg.sql            # PostgreSQL 初始化建表（禁止运行时 AutoMigrate）
+│   ├── init.sql                    # PostgreSQL 初始化建表（禁止运行时 AutoMigrate）
 │   └── README.md                   # 迁移执行说明（部署脚本/DBA 执行）
 │
 ├── docker/
