--- a/doc/DSCO同步领星设计文档/4.配置设计.md
+++ b/doc/DSCO同步领星设计文档/4.配置设计.md
@@ -208,7 +208,8 @@ log:
     "ack_to_dsco": { "enable": false, "cron": "0 */15 * * * *", "size": 200 },
     "ship_to_dsco": { "enable": false, "cron": "0 */15 * * * *", "size": 200 },
     "invoice_to_dsco": { "enable": false, "cron": "0 */15 * * * *", "size": 50 },
-    "sync_stock": { "enable": false, "cron": "0 0 0 * * *", "size": 200 }
+    "sync_stock": { "enable": false, "cron": "0 0 0 * * *", "size": 200 },
+    "cleanup_exports": { "enable": true, "cron": "0 0 */1 * * *", "size": 1 }
   },
   "mapping": {
     "shop": {},
@@ -276,6 +277,7 @@ cron 推荐使用 6 段（含秒）的格式：
 | `ship_to_dsco` | 回传物流信息 | 单次回传物流的最大订单数 | 200 |
 | `invoice_to_dsco` | 回传发票信息 | 单次回传发票的最大订单数 | 50 |
 | `sync_stock` | 库存同步 | 单次同步的最大 SKU 数（或明细条数；以实现落地为准） | 200 |
+| `cleanup_exports` | 清理导出目录 | 不使用（占位；仍需为正整数） | 1 |
 
 > 说明：
 > - `size` 不是“必须处理满额”，而是“最多处理多少条”，用于控制单次执行耗时与外部 API 压力。
@@ -331,7 +333,8 @@ cron 推荐使用 6 段（含秒）的格式：
     "ack_to_dsco": { "enable": true, "cron": "0 */15 * * * *", "size": 200 },
     "ship_to_dsco": { "enable": true, "cron": "0 */15 * * * *", "size": 200 },
     "invoice_to_dsco": { "enable": true, "cron": "0 */15 * * * *", "size": 50 },
-    "sync_stock": { "enable": true, "cron": "0 0 0 * * *", "size": 200 }
+    "sync_stock": { "enable": true, "cron": "0 0 0 * * *", "size": 200 },
+    "cleanup_exports": { "enable": true, "cron": "0 0 */1 * * *", "size": 1 }
   },
   "mapping": {
     "shop": {},
@@ -346,6 +349,7 @@ cron 推荐使用 6 段（含秒）的格式：
 
 - `pull_dsco_orders/push_to_lingxing/ack_to_dsco/ship_to_dsco/invoice_to_dsco`：建议 cron 不小于 5 分钟，避免外部 API 压力过大；`size` 从小到大逐步放量。
 - `sync_stock`：建议每日 1 次（例如 `0 0 0 * * *`）起步；如需更频繁，优先降低 `size` 控制单次耗时。
+- `cleanup_exports`：建议每小时或每日执行一次（例如 `0 0 */1 * * *`）；阈值与目录由 `env.yaml admin.export.*` 决定。
 - 当出现接口限流/超时：优先降低对应任务 `size` 或拉长 cron 周期，再观察稳定性。
 
 ### 3.3 必填与启用条件（保存时校验）
@@ -358,7 +362,7 @@ cron 推荐使用 6 段（含秒）的格式：
 - `jobs` 仅允许出现已支持的 job 名称（一期见本章“任务清单”）；出现未知 job 直接拒绝保存（避免“配了但不生效”）。
 - 各任务开关的“启用依赖”：
   - 启用任何 DSCO 相关任务前：`integration.dsco.base_url`（env.yaml）与 `auth.dsco.token`（env.yaml）必须存在。
-  - 启用任何领星相关任务前：`integration.lingxing.base_url`、`integration.lingxing.access_token`、`integration.lingxing.platform_code`、`integration.lingxing.store_id`（env.yaml）以及 `auth.lingxing.app_id/auth.lingxing.app_secret`（env.yaml）必须存在。
+  - 启用任何领星相关任务前：`integration.lingxing.base_url`、`integration.lingxing.platform_code`、`integration.lingxing.store_id`（env.yaml）以及 `auth.lingxing.app_id/auth.lingxing.app_secret`（env.yaml）必须存在；`integration.lingxing.access_token` 可选（为空时由 SDK AutoToken 自动获取/续约）。
   - 启用发货回传任务前：`integration.lingxing.sid` 必须为正整数，且 `integration.shipment.ship_date_source` 必须为合法枚举值。
   - 启用库存同步任务前：`mapping.warehouse` 必须非空。
 > 说明：敏感字段（例如 `integration.lingxing.access_token`）不进入 Admin 配置页面，仅通过部署配置管理。
