--- a/doc/DSCO同步领星设计文档/7.integration层dsco同步领星任务定义.md
+++ b/doc/DSCO同步领星设计文档/7.integration层dsco同步领星任务定义.md
@@ -175,13 +175,13 @@ DSCO 拉单 API：`GET /order/page`（`dsco.Order.GetPageRaw`）。
 
 入库时必须保存的最小字段（建议 store 层结构化列 + payload 原文）：
 
-- `po_number`（唯一键）
-- `dsco_order_id`
-- `consumer_order_number`（可空）
-- `channel`（可空）
-- `dsco_create_time`（由 `order.dscoCreateDate` 解析为 UTC 秒级时间戳）
-- `payload`（原始 JSON，允许覆盖更新）
-- `status`（默认 1，或 Admin 手动指定）
+- `po_number`（唯一键）：来源接口返回 `order.PoNumber`
+- `dsco_create_time`：由 `order.DscoCreateDate` 解析为 UTC 秒级时间戳
+- `payload`：原始 JSON，允许覆盖更新
+- `status`：默认 1，或 Admin 手动指定
+- `mskus`：`order.LineItems.sku`
+- `warehouse_id`: `order.ShipWarehouseCode`
+- `shipment`: `order.ShippingServiceLevelCode`
 
 ### 6.2 推单（DSCO → 领星：创建订单）
 
