--- a/doc/DSCO同步领星设计文档/4.配置设计.md
+++ b/doc/DSCO同步领星设计文档/4.配置设计.md
@@ -62,16 +62,16 @@ env.yaml 顶层按类型拆分为 6 类：
 
 | 字段 | 类型 | 必填 | 说明 |
 | --- | --- | --- | --- |
-| `integration.dsco.base_url` | string | 是 | DSCO API Base URL |
-| `integration.dsco.codes` | object | 否 | DSCO 侧业务数据编码配置（结构按实现迭代；仅做透传存放） |
-| `integration.lingxing.base_url` | string | 是 | 领星 API Base URL |
-| `integration.lingxing.access_token` | string | 是 | 领星 API access_token（运行时调用使用；如未来改为自动换 token，可调整实现） |
+| `integration.dsco.base_url` | string | 否 | DSCO API Base URL（可选；为空则使用 SDK 默认 BaseURLProd） |
+| `integration.lingxing.base_url` | string | 否 | 领星 API Base URL（可选；为空则使用 SDK 默认 BaseURLProd） |
 | `integration.lingxing.platform_code` | int | 是 | 领星平台编码（与业务需求一致） |
-| `integration.lingxing.store_id` | string | 是 | 领星店铺/渠道标识 |
-| `integration.lingxing.sid` | int | 是 | 领星 `sid`（用于发货回传等） |
-| `integration.shipment.ship_date_source` | string | 是 | 发货回传 `shipDate` 口径：`delivered_at` / `stock_delivered_at` / `none` |
 
 > 说明：如果未来确实需要在 Admin 热更新这些字段，可再迁回 `runtime_config`；一期先保持简单。
+
+补充说明（写死）：
+
+- 领星 `store_id`：由 DSCO 订单 `dscoRetailerId`（或 channel 兜底）通过 `runtime_config.mapping.shop` 映射得到。
+- 领星 WMS 查询 `sid`：由 DSCO 订单 `shippingServiceLevelCode`（或 requestedShippingServiceLevelCode 兜底）通过 `runtime_config.mapping.shipment` 映射得到（配置值为可解析为 int 的字符串）。
 
 ### 2.5 db（数据库配置，对齐 gormx.Config）
 
@@ -124,12 +124,7 @@ integration:
     codes: {}
   lingxing:
     base_url: "https://openapi.lingxing.com"
-    access_token: "lingxing_access_token_here"
     platform_code: 0
-    store_id: ""
-    sid: 0
-  shipment:
-    ship_date_source: "delivered_at" # delivered_at/stock_delivered_at/none
 
 db:
   dsn: "" # 优先使用；为空则用 postgres 组装
@@ -294,10 +289,10 @@ cron 推荐使用 6 段（含秒）的格式：
 
 | 字段 | 类型 | 必填 | 映射方向（约定） | 说明 |
 | --- | --- | --- | --- | --- |
-| `mapping.shop` | object(map) | 否 | DSCO 店铺/渠道 ID → 领星 store_id | 多店铺/多渠道时使用；单店铺可为空（使用 `integration.lingxing.store_id`） |
+| `mapping.shop` | object(map) | 是 | DSCO dscoRetailerId（或 channel） → 领星 store_id | 推单到领星必需（用于确定 StoreID） |
 | `mapping.warehouse` | object(map) | 是 | DSCO warehouseCode → 领星仓库 ID（WID） | 库存同步必需；key/value 都是字符串（例如 value 为 `"26"`） |
 | `mapping.sku` | object(map) | 否 | DSCO partnerSku → 领星 MSKU（或 SKU） | 推单时使用；缺省可按“同名直传”处理 |
-| `mapping.shipment` | object(map) | 否 | DSCO shipMethod → 领星 logistics_type_name | 回传物流时需要反向映射（领星 → DSCO） |
+| `mapping.shipment` | object(map) | 是 | DSCO shippingServiceLevelCode → 领星 SID（字符串） | 发货/发票回传时用于查询领星 WMS 出库单（WmsOrderList.sid_arr） |
 
 映射示例：
 
@@ -314,7 +309,7 @@ cron 推荐使用 6 段（含秒）的格式：
       "DSCO-SKU-001": "LX-SKU-001"
     },
     "shipment": {
-      "USPS_PRIORITY": "USPS Priority"
+      "FEHD": "123"
     }
   }
 }
@@ -362,10 +357,11 @@ cron 推荐使用 6 段（含秒）的格式：
 - `jobs` 仅允许出现已支持的 job 名称（一期见本章“任务清单”）；出现未知 job 直接拒绝保存（避免“配了但不生效”）。
 - 各任务开关的“启用依赖”：
   - 启用任何 DSCO 相关任务前：`integration.dsco.base_url`（env.yaml）与 `auth.dsco.token`（env.yaml）必须存在。
-  - 启用任何领星相关任务前：`integration.lingxing.base_url`、`integration.lingxing.platform_code`、`integration.lingxing.store_id`（env.yaml）以及 `auth.lingxing.app_id/auth.lingxing.app_secret`（env.yaml）必须存在；`integration.lingxing.access_token` 可选（为空时由 SDK AutoToken 自动获取/续约）。
-  - 启用发货回传任务前：`integration.lingxing.sid` 必须为正整数，且 `integration.shipment.ship_date_source` 必须为合法枚举值。
+  - 启用任何领星相关任务前：`integration.lingxing.base_url`、`integration.lingxing.platform_code`（env.yaml）以及 `auth.lingxing.app_id/auth.lingxing.app_secret`（env.yaml）必须存在。
+  - 启用 `push_to_lingxing` 前：`mapping.shop` 必须能覆盖 DSCO 订单的 `dscoRetailerId`（或 channel 兜底），否则该订单推单会被跳过并记录日志。
+  - 启用 `ship_to_dsco`/`invoice_to_dsco` 前：`mapping.shipment` 必须能覆盖 DSCO 订单的 `shippingServiceLevelCode`（用于映射到领星 SID），否则该订单会被跳过并记录日志。
   - 启用库存同步任务前：`mapping.warehouse` 必须非空。
-> 说明：敏感字段（例如 `integration.lingxing.access_token`）不进入 Admin 配置页面，仅通过部署配置管理。
+> 说明：敏感字段（`auth.*`）不进入 Admin 配置页面，仅通过部署配置管理。
 
 ## 4. 加载流程与热更新
 
