--- a/doc/DSCO同步领星设计文档/5.infra基础设施层开发设计.md
+++ b/doc/DSCO同步领星设计文档/5.infra基础设施层开发设计.md
@@ -77,7 +77,7 @@ infra/
 
 - `base`：监听地址、环境（dev/test/release）
 - `auth`：长期有效密钥（DSCO token、领星 app_id/app_secret）
-- `integration`：集成固定配置（DSCO/领星 endpoint、领星 access_token、ship_date_source 等）
+- `integration`：集成固定配置（DSCO/领星 endpoint 可选覆盖、领星 platform_code 等）
 - `db`：对齐 `golibv2/v2/tool/db/gormx.Config`
 - `admin`：后台单密码、展示时区、导出目录与阈值
 - `log`：对齐 `golibv2/v2/tool/logger.Config`
