--- a/doc/DSCO同步领星设计文档/4.配置设计.md
+++ b/doc/DSCO同步领星设计文档/4.配置设计.md
@@ -121,7 +121,6 @@ auth:
 integration:
   dsco:
     base_url: "https://api.dsco.example.com"
-    codes: {}
   lingxing:
     base_url: "https://openapi.lingxing.com"
     platform_code: 0
@@ -289,10 +288,10 @@ cron 推荐使用 6 段（含秒）的格式：
 
 | 字段 | 类型 | 必填 | 映射方向（约定） | 说明 |
 | --- | --- | --- | --- | --- |
-| `mapping.shop` | object(map) | 是 | DSCO dscoRetailerId（或 channel） → 领星 store_id | 推单到领星必需（用于确定 StoreID） |
+| `mapping.shop` | object(map) | 是 | DSCO dscoRetailerId（或 channel） → 领星 store_id（字符串） | 推单到领星必需（用于确定 StoreID）；同时该值会用于 WmsOrderList 的 `sid_arr`（需能解析为 int） |
 | `mapping.warehouse` | object(map) | 是 | DSCO warehouseCode → 领星仓库 ID（WID） | 库存同步必需；key/value 都是字符串（例如 value 为 `"26"`） |
-| `mapping.sku` | object(map) | 否 | DSCO partnerSku → 领星 MSKU（或 SKU） | 推单时使用；缺省可按“同名直传”处理 |
-| `mapping.shipment` | object(map) | 是 | DSCO shippingServiceLevelCode → 领星 SID（字符串） | 发货/发票回传时用于查询领星 WMS 出库单（WmsOrderList.sid_arr） |
+| `mapping.sku` | object(map) | 否 | （一期不使用） | 一期确认：推单到领星时 SKU 不做映射，直接将 DSCO SKU 赋值到领星建单参数 `msku`，由领星侧自动匹配 |
+| `mapping.shipment` | object(map) | 是 | DSCO `<shipWarehouseCode>-<shippingServiceLevelCode>` → 领星 `logistics_type_id` | 推单到领星时用于填写 `logistics_type_id`（当填写 wid 时必填）；若 `shipWarehouseCode` 为空，可用 `requestedWarehouseCode` 兜底生成 key |
 
 映射示例：
 
@@ -309,7 +308,7 @@ cron 推荐使用 6 段（含秒）的格式：
       "DSCO-SKU-001": "LX-SKU-001"
     },
     "shipment": {
-      "FEHD": "123"
+      "YQN-CA-FEHD": "203662740883276800"
     }
   }
 }
