更新文档和代码的匹配；添加查看订单详情逻辑

--- a/doc/DSCO同步领星设计文档/1.业务需求.md
+++ b/doc/DSCO同步领星设计文档/1.业务需求.md
@@ -3,8 +3,8 @@
 关联文档：`doc/一期系统设计文档/1. 一期业务需求（DSCO-领星自动化）.md`
 
 说明：
-- 本文定义业务需求（含 Admin 后台能力），后续开发设计将以“完全重构后的方案”为准，不以当前代码实现为依据。
-- 文中出现的表名/字段名（例如 `dsco_order_sync`、`dsco_warehouse_sync`）用于描述与沟通；最终落库口径以重构后的开发设计与迁移脚本为准。
+- 本文定义业务需求（含 Admin 后台能力），并以当前代码实现为准持续迭代。
+- 文中出现的表名/字段名（例如 `dsco_order_sync`、`dsco_warehouse_sync`）以当前实现与 `migrations/init.sql` 为准。
 
 ## 0. 总体约束（本期强约束）
 
@@ -34,7 +34,7 @@
 
 ### 2.1 范围内
 
-- 订单同步闭环：拉取 DSCO 订单原始数据、同步到领星、ACK、回传物流、回传发票
+- 订单同步闭环：拉取 DSCO 订单原始数据、同步到领星、ACK、回传物流
 - 库存同步：按“仓库 + SKU”维度对账并更新 DSCO 库存，写入同步日志
 - 幂等要求：所有“写”操作必须先检查再执行，允许重复执行但结果一致
 
@@ -59,26 +59,27 @@
 
 订单在本地表 `dsco_order_sync` 中用 `status` 字段表示同步阶段：
 
-- `1`：待同步（已拉取 DSCO 原始订单数据，待写入领星）
-- `2`：待确认（ack）（已写入领星，待 DSCO ACK）
-- `3`：已确认（已对 DSCO 执行 ACK）
-- `4`：已发货（已对 DSCO 回传物流）
-- `5`：已创建发票（完成态）（已对 DSCO 回传发票）
+- `1`：待推单到领星（已拉取 DSCO 原始订单数据）
+- `2`：待 ACK 回传（已写入领星）
+- `3`：待回传物流（shipment）（DSCO 已确认，等待发货信息回传）
+- `4`：待回传发票（invoice）（已回传物流，等待发票回传）
+- `5`：完成（已回传发票；或拉单时 DSCO `dsco_status=shipped` 直接完成）
+- `6`：已取消（DSCO `dsco_status=cancelled`）
 
 可视化（概览）：
 
-```mermaid
-stateDiagram-v2
-  [*] --> 待同步: 拉取 DSCO 订单
-  待同步 --> 待确认: 同步到领星
-  待确认 --> 已确认: 领星已审核/已发货<br/>调用 DSCO ACK
-  已确认 --> 已发货: 领星已发货<br/>回传物流到 DSCO
-  已发货 --> 已创建发票: 回传发票到 DSCO
-```
+	```mermaid
+	stateDiagram-v2
+	  [*] --> 待同步: 拉取 DSCO 订单
+	  待同步 --> 待确认: 同步到领星
+	  待确认 --> 已确认: 领星已审核/已发货<br/>调用 DSCO ACK
+	  已确认 --> 已发货: 领星已发货<br/>回传物流到 DSCO
+	  已发货 --> 完成: 回传发票到 DSCO
+	```
 
 ### 4.2 定时任务与顺序要求
 
-原始描述定义了 5 个定时任务，按分钟错峰执行（10/11/12/13/14 分钟），目的是保证阶段顺序推进：
+原始描述定义了多阶段任务，目的是保证阶段顺序推进：
 
 1. 拉取 DSCO 订单 -> 写入本地表，置为 `status=1`
 2. `status=1` -> 同步到领星，置为 `status=2`
@@ -92,22 +93,32 @@ stateDiagram-v2
 
 **触发**：定时 + Admin 手动触发（详见第 8 节）。  
 **输入**：订单“最新时间”来自本地 `dsco_order_sync.dsco_create_time`（取最大值）。  
-**动作**：从 DSCO 分页拉取订单（按 DSCO `created_at` 增量拉取），将关键字段与原始 JSON 保存到本地表，置 `status=1`。  
+**动作**：从 DSCO 分页拉取订单（按 DSCO `created_at` 增量拉取），将关键字段与原始 JSON 保存到本地表；入库 `status` 由 DSCO 的 `dsco_status` 自动推导。  
 **写入字段（任务 1 注入）**：
 
-- `po_number`：DSCO 订单号
-- `dsco_create_time`：DSCO 订单创建时间
-- `payload`：DSCO 订单原始 JSON（按 `text` 保存）
-- `msku`：DSCO 平台 SKU，多个 SKU 用逗号分割
-- `warehouse_id`：订单匹配的 DSCO 发货仓库 ID
-- `shipment`：订单匹配的 DSCO 指定物流方式
+- `po_number`：DSCO 订单号（唯一键）
+- `dsco_create_time`：DSCO 订单 `created_at`（仅使用 `dscoCreateDate`；UTC 秒级时间戳）
+- `dsco_status`：DSCO 订单拉取时状态（例如 `created`、`shipment_pending`、`shipped`、`completed`、`cancelled`）
+- `dsco_retailer_id`：DSCO `dscoRetailerId`（用于 mapping.shop 与筛选）
+- `payload`：DSCO 订单原始 JSON（覆盖更新）
+- `mskus`：订单 SKU 列表（从 DSCO 行项目提取；用于筛选/导出）
+- `warehouse_id`：DSCO 仓库编码（用于 mapping.warehouse 与筛选/导出）
+- `shipment`：DSCO 物流方式编码（取 `ShippingServiceLevelCode`；用于 mapping.shipment 与筛选/导出）
 
-**幂等要求**：同一个 `po_number` 多次拉取/入库不应产生重复记录或导致状态倒退（具体 upsert/去重口径待实现细化）。
+**幂等要求（以实现为准）**：同一个 `po_number` 多次拉取/入库采用 upsert 覆盖更新（覆盖 `payload` 与上述派生字段），不产生重复记录。
 
 **水位/起始时间口径（已确认）**：
 
 - 不单独存储“游标/水位”表：以 `dsco_order_sync.dsco_create_time` 的最大值作为下一次拉单起点。
 - 若 `dsco_order_sync` 为空：以 `2025-01-01T00:00:00Z`（UTC）作为起始时间向后拉取。
+
+**dsco_status -> status 推导规则（已确认）**：
+
+- `created` -> `status=1`
+- `shipment_pending` -> `status=3`
+- `shipped` -> `status=5`
+- `cancelled` -> `status=6`
+- 其他/空值 -> `status=1`（按待推单处理）
 
 ### 4.4 任务 2：同步到领星（待确认 ack）
 
@@ -182,11 +193,9 @@ stateDiagram-v2
 | 字段类别 | DSCO 原始订单字段 | 映射到回传发票字段 |
 | --- | --- | --- |
 | 订单关联 | `poNumber` | `poNumber` |
-| 订单关联 | `dscoOrderId` | `dscoOrderId` |
 | 商品识别 | `lineItems[].partnerSku` | `lineItems[].partnerSku` |
 | 商品识别 | `lineItems[].dscoItemId` | `lineItems[].dscoItemId` |
 | 财务背景 | `currencyCode` | `currencyCode` |
-| 参考信息 | `consumerOrderNumber` | `consumerOrderNumber` |
 
 ### 4.8 失败处理与重跑口径
 
@@ -208,14 +217,7 @@ stateDiagram-v2
 1. **初始化**：通过人工指定 DSCO 订单创建时间范围，拉取订单入库（避免服务启动时默认全量拉取带来的风险）。
 2. **紧急同步**：若业务需要立即处理某时间段订单，可再次手动拉取该时间段订单入库。
 
-手动拉单入库时，管理员必须可选择“订单入库后的初始状态值”（即 `dsco_order_sync.status` 的值），用于控制后续链路从哪个阶段开始跑（例如：从 `1` 待同步开始跑，或直接置为更后置的状态以跳过部分阶段）。
-
-**入库状态选择口径（已确认）**：
-
-- 允许管理员选择 `status=1~5`，且允许“跳阶段”（例如初始化时直接置为 `5`）。
-- 典型用法：
-  - 初始化补数据：通常置为 `5`（完成态）
-  - 紧急拉新数据：通常置为 `1`（从头跑闭环）
+手动拉单入库时，不再支持传入/选择入库 `status`：入库 `status` 由 DSCO 的 `dsco_status` 自动推导（见下文“dsco_status -> status 推导规则”）。如需人工调整同步阶段，使用 Admin 订单列表的“编辑 status”能力。
 
 ## 5. 库存同步
 
@@ -231,7 +233,7 @@ stateDiagram-v2
 
 原始口径：“所有任务，都要有一个配置开关”。一期需求至少需要支持：
 
-- 订单同步任务 1~5 分别可开/可关（避免未确认前误跑）
+- 订单同步任务 1~4（+可选 invoice）分别可开/可关（避免未确认前误跑）
 - 库存同步任务可开/可关
 - 初始化/人工触发（若保留）可开/可关
 
@@ -263,10 +265,7 @@ stateDiagram-v2
 
 管理员在 Admin 后台可查看/修改服务配置，至少包括：
 
-- 外部系统连接配置（DSCO、领星）：BaseURL、Token/AppID/AccessToken 等
-- 任务开关与周期/批大小：订单 1~5 任务、库存任务
-- 映射类配置：仓库映射、SKU 映射（以 JSON 形式录入，便于复制、审计、回滚）
-- 发货回传口径配置（例如 `shipDate` 的取值口径）
+- 业务领域配置（runtime_config）：任务开关与 cron/批大小、映射类配置（以 JSON 形式录入，便于复制与回滚）
 
 约束：
 
@@ -274,23 +273,22 @@ stateDiagram-v2
 - 敏感字段（token 等）展示需脱敏；修改应支持“保持不变”的交互（不强制重新输入）。
 - 配置保存即生效（热更新）。
 - 管理员权限模型：单密码（密码由 env 配置）。
-- env 只配置“基础服务启动所需配置”（例如端口、数据库 DSN、admin 密码）；业务运行过程中的外部系统配置/映射/任务开关与周期等，统一在 Admin 后台配置并热更新。
+- env 仅配置“基础启动配置 + 授权信息”（例如端口、数据库 DSN、Admin 密码、领星 app_id/app_secret、DSCO token 等）；业务运行过程中的任务与映射配置统一在 Admin 后台配置并热更新。
 
-### 8.2 手动拉取 DSCO 订单入库（按创建时间范围 + 可选入库状态）
+### 8.2 手动拉取 DSCO 订单入库（按创建时间范围）
 
 管理员可在 Admin 后台手动发起“拉取 DSCO 订单入库”任务，输入：
 
-- DSCO 订单创建时间范围：`start`、`end`（包含/不包含边界需明确）
-- 订单入库状态：从 `dsco_order_sync.status` 的可选值中选择（`1~5`）
+- DSCO 订单创建时间范围：`start`、`end`
 
-输出：
+输出（以实现为准）：
 
-- 展示本次拉取的统计（例如：拉取到的订单数、实际入库/更新的订单数、跳过的订单数、失败的订单数）
-- 对失败项展示原因（至少能定位到 DSCO 请求失败、入库失败、payload 解析失败等）
+- 接口返回成功/失败；失败原因在日志中排查（一期不做任务执行审计表）
 
-幂等与覆盖策略（需求必须明确）：
+幂等与覆盖策略（以实现为准）：
 
-- 若订单已存在：允许覆盖更新 `payload`，且允许覆盖更新 `status`。
+- 若订单已存在：覆盖更新 `payload`、`dsco_status`、派生字段，并按 `dsco_status` 重新推导入库 `status`。
+- 如需人工调整同步阶段，使用 Admin 订单列表的“编辑 status”能力。
 
 **时间字段口径（已确认）**：
 
@@ -302,7 +300,7 @@ stateDiagram-v2
 
 管理员可在 Admin 后台手动触发以下任务执行（可单个触发，也可一键触发全部）：
 
-- 订单同步任务 1~5
+- 订单同步任务 1~4（+可选 invoice）
 - 库存同步任务
 
 要求：
@@ -340,4 +338,3 @@ Admin 后台支持对 `dsco_warehouse_sync` 的列表查询，并支持导出 CS
 
 - 导出时间范围最大允许 1 年。
 - 导出生成 CSV 文件并立即下载；相关接口超时时间设置更大（避免导出过程中断）。
-
