--- a/doc/DSCO同步领星设计文档/2.架构设计.md
+++ b/doc/DSCO同步领星设计文档/2.架构设计.md
@@ -32,8 +32,8 @@
 - 约定：环境变量可覆盖 `env.yaml`（便于容器化/部署）
 
 2) **运行时配置（DB 持久化 + Admin 热更新）**：业务运行过程中的一切可变配置
-- 形态：PostgreSQL 表中存一份“当前生效配置”（通常为 JSON），并配套审计表
-- 内容：DSCO/领星连接信息、任务开关/周期/批大小、映射 JSON、Admin 展示时区、导出目录等
+- 形态：PostgreSQL 表 `runtime_config` 中按 `domain` 存一份“当前生效配置”（JSON）
+- 内容：任务开关/cron/批大小、映射 JSON（shop/warehouse/shipment/sku 等）
 - 行为：Admin 保存即生效（热更新）；任务执行读取“当前快照”
 
 运行时配置一致性（已确认）：
@@ -55,24 +55,21 @@
 │
 ├── admin/                         # Admin 资源与代码全部在此目录；对外统一 /admin 前缀
 │   ├── assets.go                  # embed templates/static
-│   ├── server.go                  # Gin 组装：/admin 路由组 + 中间件 + 模板/静态初始化
+│   ├── server.go                  # Gin 组装：/admin UI + /admin/api；静态资源与模板初始化
 │   ├── auth.go                    # 单密码鉴权 + session cookie（密码来自 env.yaml/env）
-│   ├── handlers/                  # 所有 handler 统一收口在一个目录，避免散落
-│   │   ├── ui.go                  # /admin/ui/*：页面渲染（列表、详情、配置页、任务页、导出页）
-│   │   ├── api_config.go          # /admin/api/config/*：读写运行时配置（校验 JSON/字段范围，保存即生效）
-│   │   ├── api_jobs.go            # /admin/api/jobs/*：手动触发任务、查询运行记录；任务运行中则拒绝
-│   │   ├── api_orders.go          # /admin/api/orders/*：手动拉单入库([start,end), 可选 status=1~5)、订单查询
-│   │   ├── api_stocks.go          # /admin/api/stocks/*：库存同步日志查询
-│   │   └── api_export.go          # /admin/api/export/*：导出 CSV（最大 1 年；生成文件并立即下载；超时设置更大）
+│   ├── ui.go                      # Admin UI 页面（dashboard/config/tasks/orders/warehouses）
+│   ├── api.go                     # Admin API（runtime_config/jobs/orders/warehouses/export）
 │   ├── static/
 │   │   ├── admin.css
 │   │   └── admin.js
 │   └── templates/
-│       ├── layout.html
+│       ├── base.html
 │       ├── login.html
 │       ├── dashboard.html
 │       ├── config.html
-│       ├── jobs.html
+│       ├── tasks.html
+│       ├── orders.html
+│       └── warehouses.html
 │       ├── orders.html
 │       ├── order_detail.html
 │       ├── warehouse_sync.html
@@ -172,7 +169,7 @@ main.go
 
 ### 5.3 导出文件落地与清理（已确认）
 
-- CSV 导出文件落地在部署机器磁盘，目录路径由运行时配置注入。
+- CSV 导出文件落地在部署机器磁盘，目录路径由 `env.yaml` 的 `admin.export_dir` 注入。
 - Admin 提供导出时“生成文件并立即下载”的能力。
 - 清理任务：当导出目录总大小超过 100MB 时触发清理（按最旧优先删除）。
 
@@ -182,4 +179,4 @@ main.go
 - 触发复用：定时与 Admin 触发共享 `integration/registry.go` + `integration/runner.go`，避免两套实现跑偏。
 - 集成扩展：新增集成只需在 `integration/` 下增加新模块目录（如 `sps_lingxing/`），并在 `integration/registry.go` 注册任务。
 - 任务颗粒度清晰：每个 `.go` 文件就是一个具体任务（拉单/推单/ACK/发货/发票/库存），便于替换与演进。
-- 配置位置清晰：启动配置在根目录 `env.yaml`；运行时配置在 DB 且可热更新并审计。
+- 配置位置清晰：启动配置与授权信息在根目录 `env.yaml`；运行时配置在 DB 且可热更新（不做审计表）。
