--- a/doc/DSCO同步领星设计文档/4.配置设计.md
+++ b/doc/DSCO同步领星设计文档/4.配置设计.md
@@ -70,8 +70,8 @@ env.yaml 顶层按类型拆分为 6 类：
 
 补充说明（写死）：
 
-- 领星 `store_id`：由 DSCO 订单 `dscoRetailerId`（或 channel 兜底）通过 `runtime_config.mapping.shop` 映射得到。
-- 领星 WMS 查询 `sid`：由 DSCO 订单 `shippingServiceLevelCode`（或 requestedShippingServiceLevelCode 兜底）通过 `runtime_config.mapping.shipment` 映射得到（配置值为可解析为 int 的字符串）。
+- 领星 `store_id`：由 DSCO 订单 `dscoRetailerId` 通过 `runtime_config.mapping.shop` 映射得到。
+- 领星 WMS 查询 `sid_arr`：一期取 `runtime_config.mapping.shop` 的映射值并尝试解析为 int（用于 `WmsOrderList.sid_arr`）。
 
 ### 2.5 db（数据库配置，对齐 gormx.Config）
 
@@ -219,8 +219,8 @@ log:
 - `jobs.*.size`：单次执行处理的最大条数上限（所有任务统一都有该字段）。
 - `mapping.shop`：店铺/渠道 ID 映射（key/value 都按字符串处理）。
 - `mapping.warehouse`：仓库 ID 映射（key/value 都按字符串处理）。
-- `mapping.sku`：SKU 映射（key/value 都按字符串处理；缺省可按“同名直传”处理）。
-- `mapping.shipment`：物流方式映射（key/value 都按字符串处理）。
+- `mapping.sku`：SKU 映射（仅用于“库存回传 DSCO”场景：领星 SKU -> DSCO partnerSku；推单到领星不使用该映射）。
+- `mapping.shipment`：物流方式映射（用于领星建单的 `LogisticsTypeID`；key 为 `<ShipWarehouseCode(空则用 RequestedWarehouseCode)>-<ShippingServiceLevelCode>`）。
 - 任务不允许并发执行同一 job（定时/手动共享互斥）。
 
 ### 3.2.1 配置项逐项说明（必须在文档中定死）
@@ -241,7 +241,7 @@ log:
 
 | 字段 | 类型 | 必填 | 说明 |
 | --- | --- | --- | --- |
-| `jobs.<job>.enable` | bool | 是 | 是否纳入定时调度；`false` 表示不定时触发（手动触发是否包含由 Admin 交互定义，建议默认仅触发 enable=true 的任务） |
+| `jobs.<job>.enable` | bool | 是 | 是否纳入定时调度；`false` 表示不定时触发（但 Admin 手动触发不受此开关限制） |
 | `jobs.<job>.cron` | string | 是 | cron 表达式（UTC 时区） |
 | `jobs.<job>.size` | int | 是 | 单次执行处理条数上限（分页大小/批量大小的统一口径） |
 
@@ -288,9 +288,9 @@ cron 推荐使用 6 段（含秒）的格式：
 
 | 字段 | 类型 | 必填 | 映射方向（约定） | 说明 |
 | --- | --- | --- | --- | --- |
-| `mapping.shop` | object(map) | 是 | DSCO dscoRetailerId（或 channel） → 领星 store_id（字符串） | 推单到领星必需（用于确定 StoreID）；同时该值会用于 WmsOrderList 的 `sid_arr`（需能解析为 int） |
+| `mapping.shop` | object(map) | 是 | DSCO dscoRetailerId → 领星 StoreID（字符串） | 推单到领星必需（用于确定 StoreID）；同时该值用于 WmsOrderList 的 `sid_arr`（需能解析为 int） |
 | `mapping.warehouse` | object(map) | 是 | DSCO warehouseCode → 领星仓库 ID（WID） | 库存同步必需；key/value 都是字符串（例如 value 为 `"26"`） |
-| `mapping.sku` | object(map) | 否 | （一期不使用） | 一期确认：推单到领星时 SKU 不做映射，直接将 DSCO SKU 赋值到领星建单参数 `msku`，由领星侧自动匹配 |
+| `mapping.sku` | object(map) | 否 | DSCO partnerSku → 领星 SKU | 推单到领星不使用；仅用于“库存回传 DSCO”时构建反向映射：领星 SKU → DSCO partnerSku |
 | `mapping.shipment` | object(map) | 是 | DSCO `<shipWarehouseCode>-<shippingServiceLevelCode>` → 领星 `logistics_type_id` | 推单到领星时用于填写 `logistics_type_id`（当填写 wid 时必填）；若 `shipWarehouseCode` 为空，可用 `requestedWarehouseCode` 兜底生成 key |
 
 映射示例：
@@ -299,7 +299,7 @@ cron 推荐使用 6 段（含秒）的格式：
 {
   "mapping": {
     "shop": {
-      "dsco_channel_1": "10001"
+      "1000011436": "110658143132021760"
     },
     "warehouse": {
       "US_WEST_01": "26"
@@ -355,11 +355,11 @@ cron 推荐使用 6 段（含秒）的格式：
 - `jobs.*.cron` 必须是可解析的 cron 表达式；`jobs.*.size` 必须为正整数。
 - `jobs` 仅允许出现已支持的 job 名称（一期见本章“任务清单”）；出现未知 job 直接拒绝保存（避免“配了但不生效”）。
 - 各任务开关的“启用依赖”：
-  - 启用任何 DSCO 相关任务前：`integration.dsco.base_url`（env.yaml）与 `auth.dsco.token`（env.yaml）必须存在。
-  - 启用任何领星相关任务前：`integration.lingxing.base_url`、`integration.lingxing.platform_code`（env.yaml）以及 `auth.lingxing.app_id/auth.lingxing.app_secret`（env.yaml）必须存在。
-  - 启用 `push_to_lingxing` 前：`mapping.shop` 必须能覆盖 DSCO 订单的 `dscoRetailerId`（或 channel 兜底），否则该订单推单会被跳过并记录日志。
-  - 启用 `ship_to_dsco`/`invoice_to_dsco` 前：`mapping.shipment` 必须能覆盖 DSCO 订单的 `shippingServiceLevelCode`（用于映射到领星 SID），否则该订单会被跳过并记录日志。
-  - 启用库存同步任务前：`mapping.warehouse` 必须非空。
+  - 启用任何 DSCO 相关任务前：`auth.dsco.token`（env.yaml）必须存在；`integration.dsco.base_url` 可为空（使用 SDK 默认 BaseURL）。
+  - 启用任何领星相关任务前：`integration.lingxing.platform_code`（env.yaml）与 `auth.lingxing.app_id/auth.lingxing.app_secret`（env.yaml）必须存在；`integration.lingxing.base_url` 可为空（使用 SDK 默认 BaseURL）。
+  - 启用 `push_to_lingxing` 前：`mapping.shop` 必须覆盖 DSCO 订单的 `dscoRetailerId`；`mapping.shipment` 必须覆盖 `<ShipWarehouseCode(空则用 RequestedWarehouseCode)>-<ShippingServiceLevelCode>`；否则该订单推单会被跳过并记录日志。
+  - 启用 `ship_to_dsco`/`invoice_to_dsco` 前：`mapping.shop` 必须非空（用于 WmsOrderList.sid_arr），否则该订单会被跳过并记录日志。
+  - 启用库存同步任务前：`mapping.warehouse` 必须非空；`mapping.sku` 可为空（缺省同名直传）。
 > 说明：敏感字段（`auth.*`）不进入 Admin 配置页面，仅通过部署配置管理。
 
 ## 4. 加载流程与热更新
