完善配置定义

--- a/doc/DSCO同步领星设计文档/4.配置设计.md
+++ b/doc/DSCO同步领星设计文档/4.配置设计.md
@@ -197,25 +197,29 @@ log:
 {
   "domain": "dsco_lingxing",
   "jobs": {
-    "pull_dsco_orders": { "enable": false, "cron": "0 */15 * * * *", "size": 200 },
-    "push_to_lingxing": { "enable": false, "cron": "0 */15 * * * *", "size": 50 },
-    "ack_to_dsco": { "enable": false, "cron": "0 */15 * * * *", "size": 200 },
-    "ship_to_dsco": { "enable": false, "cron": "0 */15 * * * *", "size": 200 },
-    "invoice_to_dsco": { "enable": false, "cron": "0 */15 * * * *", "size": 50 },
-    "sync_stock": { "enable": false, "cron": "0 0 0 * * *", "size": 200 },
-    "cleanup_exports": { "enable": true, "cron": "0 0 */1 * * *", "size": 1 }
+    "cleanup_exports": { "enable": true, "cron": "0 0 1 * * *", "size": 1 },
+    "pull_dsco_orders": { "enable": false, "cron": "0 5 * * * *", "size": 50 },
+    "push_to_lingxing": { "enable": false, "cron": "0 10 * * * *", "size": 50 },
+    "ack_to_dsco": { "enable": false, "cron": "0 15 * * * *", "size": 50 },
+    "ship_to_dsco": { "enable": false, "cron": "0 20 * * * *", "size": 50 },
+    "invoice_to_dsco": { "enable": false, "cron": "0 25 * * * *", "size": 50 },
+    "sync_stock": { "enable": false, "cron": "0 30 1 * * *", "size": 50 }
   },
   "mapping": {
-    "shop": {},
-    "warehouse": {},
+    "shop": { "1000011436": "110658143132021760" },
+    "warehouse": { "YQN-CA": "33328", "YQN-CA2": "28393" },
     "sku": {},
-    "shipment": {}
+    "shipment": {
+      "YQN-CA-FEHD": "203662740883276800",
+      "YQN-CA2-FEHD": "203656345743220736",
+      "YQN-CA2-USCG": "203656345742652928"
+    }
   }
 }
 ```
 
 字段说明（关键口径）：
-- `jobs.*.cron`：cron 表达式（UTC 时区）；建议使用 6 段（含秒）格式，例如 `0 */15 * * * *`。
+- `jobs.*.cron`：cron 表达式（UTC 时区）；使用 6 段（含秒）格式。
 - `jobs.*.size`：单次执行处理的最大条数上限（所有任务统一都有该字段）。
 - `mapping.shop`：店铺/渠道 ID 映射（key/value 都按字符串处理）。
 - `mapping.warehouse`：仓库 ID 映射（key/value 都按字符串处理）。
@@ -257,7 +261,7 @@ cron 推荐使用 6 段（含秒）的格式：
 | --- | --- |
 | 每 15 分钟执行一次 | `0 */15 * * * *` |
 | 每小时第 5 分钟执行 | `0 5 * * * *` |
-| 每天 00:00 执行 | `0 0 0 * * *` |
+| 每天 01:00 执行 | `0 0 1 * * *` |
 
 > 约束：实现侧必须选用支持“秒级 cron”的解析器（6 段），否则该配置格式不成立。
 
@@ -265,12 +269,12 @@ cron 推荐使用 6 段（含秒）的格式：
 
 | job 名称 | 用途 | size 口径 | size 建议（可调） |
 | --- | --- | --- | --- |
-| `pull_dsco_orders` | 拉取 DSCO 订单入库（按 `created_at` + `[start,end)`） | 单次拉取 DSCO 订单最大条数（分页/游标由实现决定） | 200 |
+| `pull_dsco_orders` | 拉取 DSCO 订单入库（按 `created_at` + `[start,end)`） | 单次拉取 DSCO 订单最大条数（分页/游标由实现决定） | 50 |
 | `push_to_lingxing` | 将入库订单写入领星 | 单次写入领星的最大订单数 | 50 |
-| `ack_to_dsco` | 领星状态满足条件后回传 ACK | 单次回传 ACK 的最大订单数 | 200 |
-| `ship_to_dsco` | 回传物流信息 | 单次回传物流的最大订单数 | 200 |
+| `ack_to_dsco` | 领星状态满足条件后回传 ACK | 单次回传 ACK 的最大订单数 | 50 |
+| `ship_to_dsco` | 回传物流信息 | 单次回传物流的最大订单数 | 50 |
 | `invoice_to_dsco` | 回传发票信息 | 单次回传发票的最大订单数 | 50 |
-| `sync_stock` | 库存同步 | 单次同步的最大 SKU 数（或明细条数；以实现落地为准） | 200 |
+| `sync_stock` | 库存同步 | 单次同步的最大 SKU 数（或明细条数；以实现落地为准） | 50 |
 | `cleanup_exports` | 清理导出目录 | 不使用（占位；仍需为正整数） | 1 |
 
 > 说明：
