完善设计文档说明

--- a/doc/DSCO同步领星设计文档/1.业务需求.md
+++ b/doc/DSCO同步领星设计文档/1.业务需求.md
@@ -321,6 +321,10 @@ Admin 后台支持对 `dsco_order_sync` 的列表查询，并支持导出 CSV：
 - 支持分页、排序
 - 导出 CSV：以“当前筛选条件”为范围导出
 
+补充（一期最新确认）：
+
+- Orders 列表支持对**单个订单**按当前 `status` 执行对应任务（仅处理该 `po_number`，不影响其他订单；`status=5/6` 禁用）。
+
 约束：
 
 - 导出时间范围最大允许 1 年。
