--- a/doc/DSCO同步领星设计文档/4.配置设计.md
+++ b/doc/DSCO同步领星设计文档/4.配置设计.md
@@ -223,7 +223,7 @@ log:
 - `jobs.*.size`：单次执行处理的最大条数上限（所有任务统一都有该字段）。
 - `mapping.shop`：店铺/渠道 ID 映射（key/value 都按字符串处理）。
 - `mapping.warehouse`：仓库 ID 映射（key/value 都按字符串处理）。
-- `mapping.sku`：SKU 映射（仅用于“库存回传 DSCO”场景：领星 SKU -> DSCO partnerSku；推单到领星不使用该映射）。
+- `mapping.sku`：SKU 映射（配置方向为 DSCO SKU -> 领星 SKU；推单到领星时可用于补齐 sku；回传时需构建反向映射：领星 SKU -> DSCO partnerSku）。
 - `mapping.shipment`：物流方式映射（用于领星建单的 `LogisticsTypeID`；key 为 `<ShipWarehouseCode(空则用 RequestedWarehouseCode)>-<ShippingServiceLevelCode>`）。
 - 任务不允许并发执行同一 job（定时/手动共享互斥）。
 
@@ -294,7 +294,7 @@ cron 推荐使用 6 段（含秒）的格式：
 | --- | --- | --- | --- | --- |
 | `mapping.shop` | object(map) | 是 | DSCO dscoRetailerId → 领星 StoreID（字符串） | 推单到领星必需（用于确定 StoreID）；同时该值用于 WmsOrderList 的 `sid_arr`（需能解析为 int） |
 | `mapping.warehouse` | object(map) | 是 | DSCO warehouseCode → 领星仓库 ID（WID） | 库存同步必需；key/value 都是字符串（例如 value 为 `"26"`） |
-| `mapping.sku` | object(map) | 否 | DSCO partnerSku → 领星 SKU | 推单到领星不使用；仅用于“库存回传 DSCO”时构建反向映射：领星 SKU → DSCO partnerSku |
+| `mapping.sku` | object(map) | 否 | DSCO SKU（优先 partnerSku，否则 sku） → 领星 SKU | 推单到领星：用于补齐 sku（无映射则不传）；回传/库存回写：构建反向映射（领星 SKU → DSCO partnerSku） |
 | `mapping.shipment` | object(map) | 是 | DSCO `<shipWarehouseCode>-<shippingServiceLevelCode>` → 领星 `logistics_type_id` | 推单到领星时用于填写 `logistics_type_id`（当填写 wid 时必填）；若 `shipWarehouseCode` 为空，可用 `requestedWarehouseCode` 兜底生成 key |
 
 映射示例：
