--- a/doc/DSCO同步领星设计文档/8.admin后端定义.md
+++ b/doc/DSCO同步领星设计文档/8.admin后端定义.md
@@ -65,6 +65,7 @@
 API：
 - 查询：`GET /admin/api/dsco_order_sync/list`
 - 导出：`POST /admin/api/export/dsco_order_sync`（生成 CSV 并立即下载）
+- 单订单执行：`POST /admin/api/dsco_order_sync/run_one`
 
 查询入参（QueryString，分页 + 筛选）：
 - `offset`：默认 `0`
@@ -72,6 +73,10 @@ API：
 - `po_number`：模糊匹配（包含）
 - `dsco_retailer_id`：精确匹配
 - `msku`：按 `mskus` 包含匹配
+- `warehouse_id`：精确匹配
+- `shipment`：精确匹配
+- `tracking`：包含匹配（用于筛选多运单号；本地存储为英文逗号拼接）
+- `invoice_id`：包含匹配
 - `dsco_status`：精确匹配
 - `status`：多选（逗号分隔，例如 `1,2,3`）
 - `start`/`end`：`dsco_create_time` 的 `[start,end)`（UTC 秒）
@@ -93,7 +98,23 @@ API：
 - `mskus`（展示为逗号分隔）
 - `shipped_tracking_no`
 - `dsco_invoice_id`
-- actions：`View`（查看详情）、`Edit`（编辑 status）
+- actions：`View`（查看详情）、`Run`（仅对单个订单执行任务）、`Edit`（编辑 status）
+
+单订单执行（Run）口径（写死）：
+
+- 仅对 `status=1..4` 可执行；`status=5/6`（已完成/取消）按钮禁用。
+- 任务选择规则（按当前 status 自动映射）：
+  - `1` → `push_to_lingxing`
+  - `2` → `ack_to_dsco`
+  - `3` → `ship_to_dsco`
+  - `4` → `invoice_to_dsco`
+- 仅处理该 `po_number`，不影响其他订单。
+- “条件不满足”视为执行成功：接口返回 OK，并通过 `status_before/status_after/status_changed` 提示本次是否推进状态（未推进通常表示外部数据未就绪，稍后再试）。
+
+API：
+- `POST /admin/api/dsco_order_sync/run_one`
+  - body：`{ "po_number": "C2S5..." }`
+  - 返回：`job/status_before/status_after/status_changed`
 
 ### 5.2 查看详情
 
