完善 admin ui 和 拆单订单 ack、回传物流信息、发票任务的处理

--- a/doc/DSCO同步领星设计文档/7.integration层dsco同步领星任务定义.md
+++ b/doc/DSCO同步领星设计文档/7.integration层dsco同步领星任务定义.md
@@ -253,7 +253,7 @@ DSCO shipment API：`POST /order/shipment/batch/small`（`dsco.Shipment.CreateSm
 
 幂等（写死）：
 
-- 若本地 `dsco_order_sync.shipped_tracking_no` 已有值，视为已回传过 shipment，直接跳过（不重复回传）。
+- 不以本地 `dsco_order_sync.shipped_tracking_no` 判断是否跳过；每次任务先查询 DSCO 实际 `dscoStatus`：`shipped/completed` 跳过并推进状态，`shipment_pending` 才回传物流信息。
 
 领星数据来源与优先级（写死）：
 
@@ -273,7 +273,7 @@ DSCO shipment API：`POST /order/shipment/batch/small`（`dsco.Shipment.CreateSm
 
 - `WmsOrderList` 可能返回多条出库单，且同一 `poNumber` 可能对应多个 `tracking_no`。
 - 回传 DSCO 时按 `tracking_no` 聚合生成多条 `ShipmentForUpdate`（同一 poNumber 的 shipments[] 允许多条）。
-- 本地写回 `shipped_tracking_no` 时，使用**英文逗号**拼接去重后的 tracking 列表（便于幂等与 Admin 筛选）。
+- 本地写回 `shipped_tracking_no` 时，使用**英文逗号**拼接去重后的 tracking 列表（便于展示与 Admin 筛选；不作为是否回传 shipment 的判断依据）。
 
 发货时间口径（已确认，写死）：
 
