任务增加 multi_ban 配置

--- a/doc/DSCO同步领星设计文档/1.业务需求.md
+++ b/doc/DSCO同步领星设计文档/1.业务需求.md
@@ -101,7 +101,7 @@
 - `dsco_status`：DSCO 订单拉取时状态（例如 `created`、`shipment_pending`、`shipped`、`completed`、`cancelled`）
 - `dsco_retailer_id`：DSCO `dscoRetailerId`（用于 mapping.shop 与筛选）
 - `payload`：DSCO 订单原始 JSON（覆盖更新）
-- `mskus`：订单 SKU 列表（从 DSCO 行项目提取；用于筛选/导出）
+- `mskus`：订单 SKU 列表（从 DSCO 行项目逐行写入，格式为 `sku(quantity)`，保留重复行；用于筛选/导出）
 - `warehouse_id`：DSCO 仓库编码（用于 mapping.warehouse 与筛选/导出）
 - `shipment`：DSCO 物流方式编码（取 `ShippingServiceLevelCode`；用于 mapping.shipment 与筛选/导出）
 
