--- a/doc/DSCO同步领星设计文档/7.integration层dsco同步领星任务定义.md
+++ b/doc/DSCO同步领星设计文档/7.integration层dsco同步领星任务定义.md
@@ -182,7 +182,7 @@ DSCO 拉单 API：`GET /order/page`（`dsco.Order.GetPageRaw`）。
 - `dsco_create_time`：由 `order.DscoCreateDate` 解析为 UTC 秒级时间戳
 - `payload`：原始 JSON，允许覆盖更新
 - `status`：默认 1，或 Admin 手动指定
-- `mskus`：`order.LineItems.sku`
+- `mskus`：按 `order.LineItems` 逐行写入 `sku(quantity)`（保留重复行）
 - `warehouse_id`: `order.ShipWarehouseCode`
 - `shipment`: `order.ShippingServiceLevelCode`
 
@@ -234,6 +234,7 @@ ACK 条件（已确认）：
 
 - 领星订单状态 `status` 为 `5/6`（`待发货/已发货`）即可 ACK
   - 对应枚举：`lingxing.MultiPlatformOrderStatusPendingShipment (5)` / `Shipped (6)`
+- 配置开关（可选）：若 `runtime_config.jobs.ack_to_dsco.multi_ban=true` 且该订单为“多行/多数量”订单（`mskus` 行数 > 1 或任一行 `quantity > 1`），则本任务跳过该订单的 ACK 回传（不调用 DSCO ACK 接口；本地状态保持不变，除非 DSCO 实际状态已进入后续阶段而被同步推进）。
 
 领星查询来源：
 
@@ -254,6 +255,7 @@ DSCO shipment API：`POST /order/shipment/batch/small`（`dsco.Shipment.CreateSm
 幂等（写死）：
 
 - 不以本地 `dsco_order_sync.shipped_tracking_no` 判断是否跳过；每次任务先查询 DSCO 实际 `dscoStatus`：`shipped/completed` 跳过并推进状态，`shipment_pending` 才回传物流信息。
+- 配置开关（可选）：若 `runtime_config.jobs.ship_to_dsco.multi_ban=true` 且该订单为“多行/多数量”订单（`mskus` 行数 > 1 或任一行 `quantity > 1`），则本任务跳过该订单的物流回传（不调用 DSCO shipment 接口；本地状态保持不变，除非 DSCO 已 shipped/completed 而被同步推进）。
 
 领星数据来源与优先级（写死）：
 
@@ -307,6 +309,7 @@ DSCO invoice API：`POST /invoice/batch/small`（`dsco.Invoice.CreateSmallBatch`
 幂等（写死）：
 
 - 若本地 `dsco_order_sync.dsco_invoice_id` 已有值，视为已回传过发票，直接跳过（不重复回传）。
+- 配置开关（可选）：若 `runtime_config.jobs.invoice_to_dsco.multi_ban=true` 且该订单为“多行/多数量”订单（`mskus` 行数 > 1 或任一行 `quantity > 1`），则本任务跳过该订单的发票回传（不调用 DSCO invoice 接口；本地状态保持不变）。
 
 回传口径（一期最新确认，写死）：
 
