--- a/doc/DSCO同步领星设计文档/8.admin后端定义.md
+++ b/doc/DSCO同步领星设计文档/8.admin后端定义.md
@@ -72,7 +72,7 @@ API：
 - `limit`：默认 `50`
 - `po_number`：模糊匹配（包含）
 - `dsco_retailer_id`：精确匹配
-- `msku`：按 `mskus` 包含匹配
+- `msku`：按 `mskus` 匹配（兼容 `sku` / `sku(quantity)`）
 - `warehouse_id`：精确匹配
 - `shipment`：精确匹配
 - `tracking`：包含匹配（用于筛选多运单号；本地存储为英文逗号拼接）
@@ -95,7 +95,7 @@ API：
 - `warehouse_id`
 - `shipment`
 - `dsco_retailer_id`
-- `mskus`（展示为逗号分隔）
+- `mskus`（展示为逗号分隔；元素格式为 `sku(quantity)`，保留重复行）
 - `shipped_tracking_no`
 - `dsco_invoice_id`
 - actions：`View`（查看详情）、`Run`（仅对单个订单执行任务）、`Edit`（编辑 status）
