--- a/doc/DSCO同步领星设计文档/4.配置设计.md
+++ b/doc/DSCO同步领星设计文档/4.配置设计.md
@@ -200,9 +200,9 @@ log:
     "cleanup_exports": { "enable": true, "cron": "0 0 1 * * *", "size": 1 },
     "pull_dsco_orders": { "enable": false, "cron": "0 5 * * * *", "size": 50 },
     "push_to_lingxing": { "enable": false, "cron": "0 10 * * * *", "size": 50 },
-    "ack_to_dsco": { "enable": false, "cron": "0 15 * * * *", "size": 50 },
-    "ship_to_dsco": { "enable": false, "cron": "0 20 * * * *", "size": 50 },
-    "invoice_to_dsco": { "enable": false, "cron": "0 25 * * * *", "size": 50 },
+    "ack_to_dsco": { "enable": false, "cron": "0 15 * * * *", "size": 50, "multi_ban": false },
+    "ship_to_dsco": { "enable": false, "cron": "0 20 * * * *", "size": 50, "multi_ban": false },
+    "invoice_to_dsco": { "enable": false, "cron": "0 25 * * * *", "size": 50, "multi_ban": false },
     "sync_stock": { "enable": false, "cron": "0 30 1 * * *", "size": 50 }
   },
   "mapping": {
@@ -248,6 +248,7 @@ log:
 | `jobs.<job>.enable` | bool | 是 | 是否纳入定时调度；`false` 表示不定时触发（但 Admin 手动触发不受此开关限制） |
 | `jobs.<job>.cron` | string | 是 | cron 表达式（UTC 时区） |
 | `jobs.<job>.size` | int | 是 | 单次执行处理条数上限（分页大小/批量大小的统一口径） |
+| `jobs.<job>.multi_ban` | bool | 否 | 是否禁止处理“多行/多数量”订单；仅 `ack_to_dsco`/`ship_to_dsco`/`invoice_to_dsco` 任务读取该配置；默认 `false`（不禁止） |
 
 cron 推荐使用 6 段（含秒）的格式：
 
@@ -328,9 +329,9 @@ cron 推荐使用 6 段（含秒）的格式：
   "jobs": {
     "pull_dsco_orders": { "enable": true, "cron": "0 */15 * * * *", "size": 200 },
     "push_to_lingxing": { "enable": true, "cron": "0 */15 * * * *", "size": 50 },
-    "ack_to_dsco": { "enable": true, "cron": "0 */15 * * * *", "size": 200 },
-    "ship_to_dsco": { "enable": true, "cron": "0 */15 * * * *", "size": 200 },
-    "invoice_to_dsco": { "enable": true, "cron": "0 */15 * * * *", "size": 50 },
+    "ack_to_dsco": { "enable": true, "cron": "0 */15 * * * *", "size": 200, "multi_ban": false },
+    "ship_to_dsco": { "enable": true, "cron": "0 */15 * * * *", "size": 200, "multi_ban": false },
+    "invoice_to_dsco": { "enable": true, "cron": "0 */15 * * * *", "size": 50, "multi_ban": false },
     "sync_stock": { "enable": true, "cron": "0 0 0 * * *", "size": 200 },
     "cleanup_exports": { "enable": true, "cron": "0 0 */1 * * *", "size": 1 }
   },
