完善文档说明

--- a/doc/DSCO同步领星设计文档/7.integration层dsco同步领星任务定义.md
+++ b/doc/DSCO同步领星设计文档/7.integration层dsco同步领星任务定义.md
@@ -269,7 +269,8 @@ DSCO shipment API：`POST /order/shipment/batch/small`（`dsco.Shipment.CreateSm
      - `delivered_at`（字符串时间，用于回传 DSCO 的 shipDate）
      - 若 `delivered_at` 为空：使用 `stock_delivered_at` 兜底
      - `product_info[]`（`sku` + `count`，用于实发数量）
-2) 若 WmsOrderList 无数据，认为“暂未满足回传条件”，等待下次任务重试（不再用订单详情兜底拼 shipDate）。
+   - 前置条件（写死）：只处理 `WmsOrder.status = 3`（已发货）的出库单；其他状态不回传（避免 shipDate 为空值/过早回传）。
+2) 若 WmsOrderList 无数据（或筛选后无 `status=3` 的记录），认为“暂未满足回传条件”，等待下次任务重试（不再用订单详情兜底拼 shipDate）。
 
 多运单号/多出库单（写死）：
 
@@ -279,14 +280,14 @@ DSCO shipment API：`POST /order/shipment/batch/small`（`dsco.Shipment.CreateSm
 
 发货时间口径（已确认，写死）：
 
-- DSCO `shipDate` 统一取自 `WmsOrder.DeliveredAt`，并转换为 DSCO 要求的 ISO 8601/RFC3339（如 `YYYY-MM-DDTHH:MM:SSZ`）。
+- DSCO `shipDate` 统一取自 `WmsOrder.status=3` 的出库单：优先 `WmsOrder.DeliveredAt`；为空则 `WmsOrder.StockDeliveredAt` 兜底；并转换为 DSCO 要求的 ISO 8601/RFC3339（如 `YYYY-MM-DDTHH:MM:SSZ`）。
 
 字段映射（最小必要字段）：
 
 - 领星 → DSCO：
   - `tracking_no` → `trackingNumber`（必填）
   - `shipMethod`：使用 DSCO 原始订单中的 `shipMethod/requestedShipMethod`；若为空则使用 `shippingServiceLevelCode` 兜底
-  - `shipDate`：使用 `WmsOrder.DeliveredAt` 转换为 RFC3339
+  - `shipDate`：优先 `WmsOrder.DeliveredAt`；为空则 `WmsOrder.StockDeliveredAt`；转换为 RFC3339
 - 发货行项目：
   - 来源：优先用 WmsOrderList `product_info[]`（SKU+count）
   - SKU 映射：领星 SKU 通过 `mapping.sku` 的**反向映射**得到 DSCO `partnerSku`（缺省同名直传）
